# fhirside-chat

./: .gitignore  README.md  docker-compose.yaml  env-sample.txt  pyproject.toml
.ai/: debug-log.md
.bmad-core/: install-manifest.yaml
aidbox/: Dockerfile  init-bundle.json
docs/architecture/: coding-standards.md  high-level-architecture.md  index.md  introduction.md  next-steps.md  source-tree.md  tech-stack.md
docs/design/: accessibility-checklist.md  component-library.md  tailwind-config.md  wireframes.md
docs/epics/: epic-001-patient-history-enhancement.md  epic-002-frontend-chat-interface.md  epic-003-realtime-websocket-migration.md
docs/stories/: story-001-patient-history-endpoint.md  story-002-completion-summary.md  story-002-telemetry-api-endpoint.md  story-003-react-chat-foundation.md  story-004-chat-ui-enhancement.md  story-005-telemetry-visualization-panel.md  story-006-backend-websocket-infrastructure.md  story-007-realtime-telemetry-emission.md  story-008-frontend-websocket-client.md  story-009-streaming-ui-updates.md  story-010-websocket-migration-cleanup.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
src/: __init__.py  agent.py  app.py
src/ai/: agents.py  telemetry.py
src/models/: clinical_history.py  patient.py  telemetry.py  websocket_messages.py
src/telemetry/: event_emitter.py  jaeger_client.py
src/websocket/: connection_manager.py
tests/: test_app.py  test_telemetry_endpoint.py
tests/ai/: test_agents.py  test_telemetry.py
tests/e2e/: README.md  (+1 more)
(+24 files in other folders)
